<resources>
    <string name="app_name">Diabetfix</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="name">Name:</string>
    <string name="age">Age:</string>
    <string name="sex">Sex:</string>
    <string name="peter_the_anteater">Peter the Anteater</string>
    <string name="_22">22</string>
    <string name="height">Height:</string>
    <string name="in_cm">in cm</string>
    <string name="weight">Weight:</string>
    <string name="in_lb">in lb</string>
    <string name="save">Save</string>

    <string name="username">USERNAME: </string>
    <string name="password">PASSWORD: </string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="create_account">Don\'t have an account? Sign up here</string>

    <string name="glucose">Glucose</string>
    <string name="food">Food</string>
    <string name="exercise">Exercise</string>
    <string name="journal">Journal</string>
    <string name="log_food">Log Food</string>
    <string name="log_exercise">Log Exercise</string>
    <string name="log_glucose">Log Glucose Level</string>
    <string name="recommend_exercise">Recommended Exercise: </string>
    <string name="recommended_food">Recommended Food: </string>
    <string name="glucose_score">Blood Sugar Score: </string>
    <string name="credits">Credits</string>

    <string-array name="sexes">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>
